# Eleicao-2022-Dot-Density-Map

./: .checkov.baseline  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  cdk.json  pyproject.toml  records
.github/workflows/: deploy.yaml
local_scripts/: deduplicate_secoes_eleitorais.py  enrich_and_send_to_aws.py  generate_geo_vote_data.ipynb  upload_geo_ceps_to_dynamo.py
local_scripts/add_cep_to_original_db/: add_cep.py
local_scripts/enrich_cep_geolocation/: enrich_cep_geolocation.py
local_scripts/process_addresses/: athena_query.sql  build_final_enriched_dataset.py  enrich_and_send_to_aws.py  get_data_from_athena.py  process_TREs.py  process_secoes_eleitorais.py
src/data_processing/: config.py  stack.py
src/data_processing/constructs/: address_enrichment.py  athena.py  construct.py  dynamo_db.py  geo_vote.py  glue.py
src/data_processing/functions/enrich_addresses/: index.py  requirements.txt
src/data_processing/functions/geo_vote/: Dockerfile  index.py  requirements.txt
tests/: conftest.py
tests/unit/: test_stack.py
